# date_extractor

./: CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
date_extractor/: __init__.py  extraction.py  extraction_classes.py
docs/: index.md  modules.md
src/datetime_extractor/: datetime_extraction_classes.py  datetime_extractor.py
tests/: test_find.py  test_foo.py
